--- a/config.yaml
+++ b/config.yaml
@@ -539,7 +539,7 @@ badbot:
 
 communityfaq: >
 
-  Hi, this is an *unofficial* FAQ archive of common [community questions and answers](https://www.reddit.com/r/raidennetwork/comments/7hhkv5/work_in_progress_raiden_network_and_token_faq/). Please find the Raiden official FAQ [here](https://raiden.network/faq.html).
+  Hi, this is an *unofficial* FAQ archive of common community questions and answers([many of which are sourced from here](https://www.reddit.com/r/raidennetwork/comments/7hhkv5/work_in_progress_raiden_network_and_token_faq/)). Please find the Raiden official FAQ [here](https://raiden.network/faq.html).
 
 
   1. Running a /mainnet or /testnet node
@@ -564,7 +564,10 @@ communityfaq: >
 
   11. Why won't Raiden be made /obsolete by future Ethereum upgrades?
 
-  12. Where can I find a resource with /everything (almost)?
+  12. Why is the Raiden Network /Token worth anything?
+
+  13. Where can I find a resource with /everything (almost)?
+
 
 
   /Remove menu
@@ -601,8 +604,6 @@ standardization: >
   Q: Bitcoin has one solution for layer 2 scaling that's almost canonical in that community, which is the Lightning Network. Whereas in Ethereum you have a much more fragmented space in L2, even within the Plasma community or the State Channels community, there isn't really one solution that everyone is coalescing around. Why do think that is and how much of a problem do you think that is for the community? [Answer summary](https://t.me/RaidenNetworkCommunity/26274)
 
 
-  /additional community info (exits community FAQ and runs community function)
-
   /back to menu
 
 plasma: >
@@ -636,6 +637,7 @@ pathfinding: >
 
   Pathfinding Services
 
+  [PFS](https://raiden-network-specification.readthedocs.io/en/latest/pathfinding_service.html#raiden-pathfinding-service) specs and [Raiden Services Documentation (latest)](https://raiden-services.readthedocs.io/en/latest/).
 
   /back to menu.
 
@@ -697,8 +699,16 @@ remove: >
 
 everything: >
 
-  (Here)[https://github.com/mat7ias/RaidenResourcesBot/blob/master/README.md]
+  [Here!](https://github.com/mat7ias/RaidenResourcesBot/blob/master/README.md)
+
+token: >
+
+  The RDN token is used to pay and receive the small node incentivization fees that are necessary for the network to provide good UX. Since most users won't run full nodes, but a lighter app, there will be a Light Client Gateway Service Fee for them to connect to the network through a full node. Other providers of services on the network will provide pathfinding and channel monitoring services; all of these services be paid in RDN.
+
+  As the network grows, the circulation and value of the RDN token will grow, however, the network itself will not become more expensive to use, since a growing number of nodes will compete for traffic through lowering their fees.
+
+  These fees are necessary for such an network to function, because running larger full nodes has a cost in effort, bandwidth and the number of tokens locked in a channel deposit.
 
 CommunityFAQdisclaimer: >
 
-  The community FAQ is a collected collected archive at the request of the Raiden community. They aren't checked for accuracy and aren't guaranteed to be accurate.
+  The community FAQ is an archive of questions and answers by the community collected at the request of the Raiden community. They aren't checked for accuracy and aren't guaranteed to be correct.
